<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/foto1"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/ivLogo"
        app:boxBackgroundColor="#20857F81"
        android:gravity="center"
        android:textColorHint="#120077"
        android:id="@+id/met1">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/roundedcorner"
            android:drawableStart="@drawable/ic_name"
            android:drawableLeft="@drawable/ic_name"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/met1"
        app:boxBackgroundColor="#20857F81"
        android:gravity="center"
        android:textColorHint="#120077"
        android:id="@+id/met2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/roundedcorner"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/met2"
        app:boxBackgroundColor="#20857F81"
        android:gravity="center"
        android:textColorHint="#120077"
        android:id="@+id/met3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/roundedcorner"
            android:drawableStart="@drawable/ic_lock1"
            android:drawableLeft="@drawable/ic_lock1"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/met3"
        app:boxBackgroundColor="#20857F81"
        android:gravity="center"
        android:textColorHint="#120077"
        android:id="@+id/met4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/roundedcorner"
            android:drawableStart="@drawable/ic_lock2"
            android:drawableLeft="@drawable/ic_lock2"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textSize="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/met4"
        app:boxBackgroundColor="#20857F81"
        android:gravity="center"
        android:textColorHint="#120077"
        android:id="@+id/met5">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/roundedcorner"
            android:drawableStart="@drawable/ic_mobile"
            android:drawableLeft="@drawable/ic_mobile"
            android:hint="@string/enter_mobile"
            android:inputType="number"
            android:textSize="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/met5">

    <RadioButton
        android:id="@+id/rb1"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/met5"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="11dp"
        android:gravity="left"
        android:hint="@string/male"
        android:textStyle="bold"
        android:textColorHint="#000000"
        android:textSize="15dp"
        />

    <RadioButton
        android:id="@+id/rb2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/met5"
        android:layout_toRightOf="@id/rb1"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="25dp"
        android:gravity="right"
        android:hint="@string/female"
        android:textStyle="bold"
        android:textColorHint="#000000"
        android:textSize="15dp"
        />

    </RadioGroup>

    <Button
        android:id="@+id/btnregister"
        android:hint="@string/register"
        android:backgroundTint="#03A9F4"
        android:layout_below="@id/rg1"
        android:gravity="center"
        android:layout_marginLeft="75dp"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:textColorHint="#FFFFFF"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <TextView
        android:hint="@string/copyright"
        android:layout_below="@id/btnregister"
        android:gravity="center"
        android:textColorHint="#000000"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>